--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -135,7 +135,7 @@
     </li>
 
     <li class="nav-item">
-    <a class="nav-link" *ngIf="apikey!=='null'" id='darkred' >SAVED PROPERTY</a>
+    <a class="nav-link" *ngIf="apikey!=='null'" id='darkred' routerLink='/mysavedproperty' >SAVED PROPERTY</a>
     </li>
     <li class="nav-item">
     <a class="nav-link" *ngIf="apikey!=='null'" id='darkred'>NOTIFICATIONS</a>
