privacy policy added

--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -229,6 +229,8 @@
 
 
 </form>
+<br>
+<p><a routerLink='/PrivacyPolicy'> Terms and conditions</a></p>
                       </div>
                     </div>
             </div>
