--- a/src/app/saved-property/saved-property.component.html
+++ b/src/app/saved-property/saved-property.component.html
@@ -27,7 +27,7 @@
             <a class="nav-link" href="#"><i class='fa fa-list-alt'></i> List <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" (click)='mapSearch()'><i class='fa fa-globe'></i> Map</a>
+            <a class="nav-link"><i class='fa fa-globe'></i> Map</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="#" data-toggle="modal" data-target="#myModal"><i class='fa fa-save'></i><span id='savesearchid'>Save Search</span></a>
@@ -123,7 +123,7 @@
         <i class='fa fa-bed' style='color:white'></i> {{i.Bedrooms}}
         <i class='fa fa-bath' style='color:white'></i> {{i.Bathrooms}}
         <i class='fa fa-car' style='color:white'></i>  {{i.Car_spaces}}
-        <i class='fa fa-star' id='star' style='color:white; float:right; cursor:pointer' (click)='starItem(i)'></i>
+        <i class='fa fa-star' id='star' style='color:white; float:right; cursor:pointer'></i>
 
 
 
